--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "baseUrl": "./",
+        "baseUrl": ".",
         "paths": {
             "/*": [
                 "./*",
@@ -11,14 +11,11 @@
             "@app/*": [
                 "./src/app/*"
             ],
-            "@utils/*": [
-                "./src/utils/*"
+            "@pages/*": [
+                "./src/pages/*"
             ],
             "@shared/*": [
                 "./src/shared/*"
-            ],
-            "@shared/": [
-                "./src/shared/"
             ],
         }
     }
