--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -17,6 +17,9 @@
             "@shared/*": [
                 "./src/shared/*"
             ],
+            "@shared/": [
+                "./src/shared/"
+            ],
             "@widgets/*": [
                 "./src/widgets/*"
             ]
