--- a/.eslintignore
+++ b/.eslintignore
@@ -2,17 +2,18 @@
 .eslintrc.json
 
 # next-config.ts
-next.config.ts
+next.config.mjs
 
 # ts-configs
 tsconfig.json
+tsconfig.paths.json
 
 # gitignore
 .gitignore
 
-# tailwind.config.js
-tailwind.config.js
+# tailwind.config.ts
+tailwind.config.ts
 
-# postcss.config.js
-postcss.config.js
+# postcss.config.mjs
+postcss.config.mjs
 
