--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -31,7 +31,13 @@
             ],
             "@widgets/": [
                 "./src/widgets/"
-            ]
+            ],
+            "@features/": [
+                "./src/features/"
+            ],
+            "@features/*": [
+                "./src/features/*"
+            ],
         }
     }
 }
