--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.59.0",
+    "@types/validator": "^13.12.2",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "framer-motion": "^11.11.1",
@@ -19,7 +20,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-number-format": "^5.4.2",
     "tailwind-merge": "^2.5.3",
+    "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
