session | add entity card-photo, add gallery-wrapper

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -38,6 +38,12 @@
             "@features/*": [
                 "./src/features/*"
             ],
+            "@entities/": [
+                "./src/entities/"
+            ],
+            "@entities/*": [
+                "./src/entities/*"
+            ]
         }
     }
 }
