--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-image-gallery": "^1.3.0",
     "react-number-format": "^5.4.2",
     "tailwind-merge": "^2.5.3",
     "validator": "^13.12.0",
