--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-image-gallery": "^1.2.4",
     "@typescript-eslint/parser": "^8.8.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
