--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
-    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.59.16",
     "@types/validator": "^13.12.2",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "framer-motion": "^11.11.1",
+    "graphql-tag": "^2.12.6",
+    "graphql-tag-ts": "^0.1.16",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
@@ -28,6 +31,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@tanstack/eslint-plugin-query": "^5.59.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
