--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "framer-motion": "^11.11.1",
-    "graphql-tag": "^2.12.6",
-    "graphql-tag-ts": "^0.1.16",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
@@ -44,7 +42,8 @@
     "postcss": "^8",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-graphql-loader": "^1.0.2"
   },
   "browserslist": [
     ">0.3%",
