--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL='http://localhost:1337/api'
-NEXT_PUBLIC_API_ENDPOINT="endpoint"
+NEXT_PUBLIC_API_URL='http://localhost:1337'
+NEXT_PUBLIC_API_ENDPOINT="api/endpoint"
