--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.0",
     "react-image-gallery": "^1.3.0",
     "react-number-format": "^5.4.2",
