--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.53.0",
     "react-image-gallery": "^1.3.0",
     "react-number-format": "^5.4.2",
+    "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.3",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
