--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.0",
     "react-image-gallery": "^1.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-number-format": "^5.4.2",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.3",
