--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
@@ -23,10 +24,8 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.0",
     "react-image-gallery": "^1.3.0",
-    "react-number-format": "^5.4.2",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.3",
-    "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
