--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^11.11.1",
     "next": "14.2.14",
+    "next-transition-router": "^0.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
