--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,13 @@
 *.pem
 
 # debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/npm-debug.log*
+/yarn-debug.log*
+/yarn-error.log*
 
 # local env files
-.env*.local
+/.env*.local
+/.env
 
 # vercel
 .vercel
