--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-query-devtools": "^5.59.16",
-    "@types/validator": "^13.12.2",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "framer-motion": "^11.11.1",
     "next": "14.2.14",
+    "next-sitemap": "^4.2.3",
     "next-transition-router": "^0.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -36,6 +36,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-image-gallery": "^1.2.4",
+    "@types/validator": "^13.12.2",
     "@typescript-eslint/parser": "^8.8.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
