main | fix: env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-NEXT_PUBLIC_API_URL='http://localhost:1337/api'
-NEXT_PUBLIC_API_ENDPOINT="endpoint"
+NEXT_PUBLIC_API_HOST="localhost"
+NEXT_PUBLIC_API_URL="http://localhost:1337"
+NEXT_PUBLIC_API_ENDPOINT="api/endpoint"
+
+TRAEFIK_CERTIFICATE_EMAIL="example@email.ru"
