--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -76,7 +76,7 @@ services:
       PGDATA: /data/postgres
       PGUSER: ${DB_ROOT_USERNAME}
     volumes:
-      - strapi-data:/var/lib/postgresql/data/ # использование volume
+      - strapi-data:/var/lib/postgresql/data/
     ports:
       - "5432"
     networks:
@@ -87,11 +87,12 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000" # Порт внутри контейнера
+      - "3000"
     restart: always
     environment:
-      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
-      NEXT_PUBLIC_API_ENDPOINT: ${NEXT_PUBLIC_API_ENDPOINT}
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+        NEXT_PUBLIC_API_ENDPOINT: ${NEXT_PUBLIC_API_ENDPOINT}
+        NEXT_PUBLIC_API_HOST: ${NEXT_PUBLIC_API_HOST}
     networks:
       - traefik-net
     labels:
