--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -102,19 +102,17 @@ services:
       - traefik-net
     labels:
         - "traefik.enable=true"
-        - "traefik.docker.network=photo_frontend_traefik-net"
-        - "traefik.http.routers.public.rule=Host(`melnikova-foto72.ru`,`www.melnikova-foto72.ru`)"
-        - "traefik.http.routers.public.tls=true"
-        - "traefik.http.services.public.loadbalancer.server.port=3000"
-        - "traefik.http.services.public.loadbalancer.server.scheme=http"
+        - "traefik.docker.network=traefik-net"
+        - "traefik.http.routers.public.rule=Host(`melnikova-foto72.ru`, `www.melnikova-foto72.ru`)"
         - "traefik.http.routers.public.entrypoints=websecure"
+        - "traefik.http.routers.public.tls=true"
         - "traefik.http.routers.public.tls.certresolver=myresolver"
-        - "traefik.http.routers.public.service=public"
+        - "traefik.http.services.public.loadbalancer.server.port=3000"
         - "traefik.http.routers.www-redirect.rule=Host(`www.melnikova-foto72.ru`)"
         - "traefik.http.routers.www-redirect.entrypoints=websecure"
         - "traefik.http.routers.www-redirect.middlewares=www-to-non-www"
-        - "traefik.http.middlewares.www-to-non-www.redirectregex.permanent=true"
         - "traefik.http.middlewares.www-to-non-www.redirectregex.regex=^https://www.melnikova-foto72.ru/(.*)"
         - "traefik.http.middlewares.www-to-non-www.redirectregex.replacement=https://melnikova-foto72.ru/$${1}"
+        - "traefik.http.middlewares.www-to-non-www.redirectregex.permanent=true"
 volumes:
   strapi-data:
